<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="agree_label">Agree</string>
    <string name="app_name">BrowseHere</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_here">BrowseHere</string>
    <string name="cancel_label">X</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">4478da63a4c944fbadc3652e7ce4aaf4</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_message_body">message body</string>
    <string name="default_title">Title</string>
    <string name="default_web_client_id">901131503321-k780iui3ip6gbla5rhe5uf7jmj3c9ick.apps.googleusercontent.com</string>
    <string name="do_not_shell_my_information">BrowseHere and our advertising partners collect certain information, including advertising identifiers on your devices, and/or the IP address of your devices when you visit our app. We and our partners use that information to deliver online advertisements to you on your devices and tailor those ads to your interests. Such sharing may be considered a “Sale” under the California Consumer Privacy Act (CCPA). The CCPA provides a right to California residents to opt out of the “Sale” of personal information. If you are a California resident and wish to opt out of the “Sale” of your information in connection with tailored advertising that appears primarily on BrowseHere app. Please turn on the option of Limit Ad Tracking in BrowseHere. Please note that opting out does not mean that you will stop seeing all ads. To learn more about our privacy practices, please see our Privacy Policy.</string>
    <string name="done">Done</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_paused">Downloads paused</string>
    <string name="exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="portal_browse_adblock_continue">CONTINUE</string>
    <string name="portal_browse_adblock_popup">The popup is blocked, Would you like to continue to the new page?</string>
    <string name="portal_browse_dialog_ok">OK</string>
    <string name="portal_browse_ua_qrcode_tip">Scan to input</string>
    <string name="portal_browser_ssl_content_start">Attackers might be trying to steal your information from</string>
    <string name="portal_browser_ssl_left">ADVANCED</string>
    <string name="portal_browser_ssl_left_content">This server could not prove that it is</string>
    <string name="portal_browser_ssl_proceed">Proceed to this website (unsafe)</string>
    <string name="portal_browser_ssl_right">REFRESH</string>
    <string name="portal_browser_ssl_title">Your connection is not private</string>
    <string name="portal_home_ad_block_item">Smart Ad Blocker</string>
    <string name="portal_home_ad_block_privacy">"Intelligently blocks ads you might not want to see, but this doesn't mean that all the ads on any website will be blocked."</string>
    <string name="portal_home_ad_block_title">WebPages Ad Blocking</string>
    <string name="portal_home_dialog_btn_cancel">CANCEL</string>
    <string name="portal_home_legal_terms">Terms &amp; Conditions</string>
    <string name="portal_home_ninjia_dec">Your privacy is important to us. When using Ninja mode, rest assured that your browsing history, cookies, and site data, as well as any information entered in forms, will not be saved. This ensures that other users of this device cannot view your activity. However, please be aware that your online actions may still be visible to the websites you visit, your organization, or your Internet Service Provider. Note that while your browsing remains private, any bookmarks you create will be saved.</string>
    <string name="portal_home_ninjia_title">Now, you are in Ninja mode</string>
    <string name="portal_home_setting_about">About</string>
    <string name="portal_home_setting_ad_block">Webpage Ads Blocking</string>
    <string name="portal_home_setting_ad_privacy">Personalized Ads Privacy Statement</string>
    <string name="portal_home_setting_ad_tracking">Limited Ad Tracking</string>
    <string name="portal_home_setting_cookie_title">Cookie</string>
    <string name="portal_home_setting_global_privacy">TCL Global Privacy Notice</string>
    <string name="portal_home_setting_javascript_description">Some browser features will not work if JavaScript is off</string>
    <string name="portal_home_setting_javascript_title">JavaScript</string>
    <string name="portal_home_setting_language">Language</string>
    <string name="portal_home_setting_legal">Legal Information</string>
    <string name="portal_home_setting_not_sell">Do Not Sell My Information</string>
    <string name="portal_home_setting_title">Settings</string>
    <string name="portal_home_setting_tv_cookies_description">"If you turn off this function, you have to sign-in
every time for each website."</string>
    <string name="portal_iptv_back">Back</string>
    <string name="portal_iptv_edit_m3u_url">M3U URL</string>
    <string name="portal_iptv_edit_name">Playlist Name (Optional)</string>
    <string name="portal_iptv_edit_password">Password</string>
    <string name="portal_iptv_edit_username">Username</string>
    <string name="portal_iptv_exit_m3u_url_tips">Please start with https:// or http://</string>
    <string name="reject_all_label">Reject All</string>
    <string name="show_options_label">Show Options</string>
</resources>