<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/cs_settings" android:tag="layout/fragment_settings_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/portal_home_recycle_view_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_72" android:layout_marginBottom="@dimen/dimen_72" android:text="@string/portal_home_setting_title" android:layout_marginStart="@dimen/dimen_116" style="@style/Text_H1_Normal" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_item_legal" android:background="@drawable/bg_top_radius_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginTop="@dimen/dimen_8" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_legal" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
            <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_ad_block" android:background="@drawable/bg_setting_item_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_ad_block" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
            <com.tcl.browser.portal.home.view.component.SettingSwitchItemView android:layout_gravity="center_horizontal" android:id="@id/setting_cookie" android:background="@drawable/bg_setting_item_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_2" app:subTitleText="@string/portal_home_setting_tv_cookies_description" app:titleText="@string/portal_home_setting_cookie_title" />
            <com.tcl.browser.portal.home.view.component.SettingSwitchItemView android:layout_gravity="center_horizontal" android:id="@id/setting_javascript" android:background="@drawable/bg_setting_item_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_2" app:subTitleText="@string/portal_home_setting_javascript_description" app:titleText="@string/portal_home_setting_javascript_title" />
            <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_item_language" android:background="@drawable/bg_setting_item_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_language" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
            <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_item_about" android:background="@drawable/bg_bottom_radius_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_80" android:text="@string/portal_home_setting_about" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>