<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="@dimen/element_dialog_content_ui_text_min_height" android:layout_height="@dimen/element_dialog_content_ui_text_min_height" android:layout_marginTop="50.0dip" android:src="@drawable/iv_ssl_error" android:scaleType="centerCrop" android:layout_marginStart="100.0dip" />
    <com.tcl.uicompat.TCLTextView android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="180.0dip" android:text="@string/portal_browser_ssl_title" android:layout_marginStart="100.0dip" style="@style/Text_H1_Focus" />
    <com.tcl.uicompat.TCLTextView android:id="@id/tv_ssl_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/portal_browser_ssl_content_start" android:layout_below="@id/tv_title" android:layout_marginStart="100.0dip" android:layout_marginEnd="100.0dip" style="@style/Text_Body3_Medium_Focus" />
    <com.tcl.uicompat.TCLButton android:id="@id/btn_hide" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/portal_browser_ssl_left" android:layout_below="@id/tv_ssl_content" android:layout_marginStart="100.0dip" style="@style/Button_Large" />
    <com.tcl.uicompat.TCLButton android:id="@id/btn_refresh" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/portal_browser_ssl_right" android:layout_below="@id/tv_ssl_content" android:layout_marginEnd="100.0dip" android:layout_alignParentEnd="true" style="@style/Button_Large" />
    <com.tcl.uicompat.TCLTextView android:id="@id/tv_ssl_tips" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="120.0dip" android:text="@string/portal_browser_ssl_left_content" android:layout_below="@id/tv_ssl_content" android:layout_marginStart="100.0dip" android:layout_marginEnd="100.0dip" style="@style/Text_Small2_Focus" />
    <com.tcl.uicompat.TCLButton android:id="@id/btn_proceed" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/portal_browser_ssl_proceed" android:layout_below="@id/tv_ssl_tips" android:layout_marginStart="100.0dip" android:layout_marginEnd="100.0dip" style="@style/Button_Large" />
</RelativeLayout>