<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/native_message_v6" android:background="@android:color/white" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="36.0sp" android:gravity="center_vertical" android:id="@id/title_tv" android:paddingLeft="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/default_title" android:layout_above="@id/description_scrollview" />
    <ScrollView android:id="@id/description_scrollview" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="false" android:layout_centerInParent="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="14.0sp" android:id="@id/msg_body_tv" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/default_message_body" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/accept_all_btn" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="60.0dip" android:layout_marginBottom="60.0dip" android:text="@string/agree_label" android:includeFontPadding="true" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_marginEnd="60.0dip" android:layout_alignParentEnd="true" />
    <Button android:id="@id/cancel_btn" android:paddingLeft="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip" android:text="@string/cancel_label" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_marginEnd="30.0dip" android:layout_alignParentEnd="true" />
    <Button android:id="@id/reject_all_btn" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="60.0dip" android:layout_marginBottom="60.0dip" android:text="@string/reject_all_label" android:includeFontPadding="true" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:layout_marginStart="60.0dip" android:layout_alignParentStart="true" />
    <Button android:id="@id/show_options_btn" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:text="@string/show_options_label" android:layout_marginStart="30.0dip" />
</RelativeLayout>