<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/cs_settings" android:tag="layout/fragment_leagl_info_0" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/portal_home_recycle_view_tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_72" android:layout_marginBottom="@dimen/dimen_80" android:text="@string/portal_home_setting_legal" android:layout_marginStart="@dimen/dimen_116" style="@style/Text_H1_Normal" />
    <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_terms" android:background="@drawable/bg_top_radius_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_legal_terms" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
    <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_global_privacy" android:background="@drawable/bg_setting_item_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_global_privacy" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
    <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_ad_privacy" android:background="@drawable/bg_setting_item_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_ad_privacy" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
    <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_not_sell" android:background="@drawable/bg_setting_item_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:layout_marginBottom="@dimen/dimen_2" android:text="@string/portal_home_setting_not_sell" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
    <com.tcl.browser.portal.home.view.component.SettingNormalItemView android:gravity="start|center" android:layout_gravity="center_horizontal" android:id="@id/settings_ad_tracking" android:background="@drawable/bg_bottom_radius_selector" android:layout_width="@dimen/dimen_1400" android:layout_height="@dimen/dimen_144" android:text="@string/portal_home_setting_ad_tracking" android:paddingStart="@dimen/dimen_40" android:paddingEnd="@dimen/dimen_32" style="@style/Text_Body1_Normal" />
</LinearLayout>