<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/dialog_add_m3u_url_layout_0" android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/rl_edit_dialog" android:background="@drawable/portal_iptv_dialog_add_url_bg" android:layout_width="@dimen/dimen_800" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <com.tcl.uicompat.TCLEditText android:textColorHint="#66ffffff" android:ellipsize="end" android:id="@id/playlist_name" android:background="@drawable/portal_iptv_edit_selector" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_88" android:layout_marginTop="@dimen/dimen_88" android:hint="@string/portal_iptv_edit_name" android:imeOptions="actionSearch" android:paddingStart="@dimen/dimen_32" android:paddingEnd="@dimen/dimen_2" android:layout_marginStart="@dimen/dimen_64" android:layout_marginEnd="@dimen/dimen_50" style="@style/NormalEditText" />
        <TextView android:textSize="@dimen/dimen_28" android:id="@id/edit_tip" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_18" android:text="@string/portal_iptv_exit_m3u_url_tips" android:layout_marginStart="@dimen/dimen_64" android:layout_marginEnd="@dimen/dimen_50" />
        <com.tcl.uicompat.TCLEditText android:textColorHint="#66ffffff" android:ellipsize="end" android:id="@id/edit_url" android:background="@drawable/portal_iptv_edit_selector" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_88" android:layout_marginTop="@dimen/dimen_16" android:hint="@string/portal_iptv_edit_m3u_url" android:drawablePadding="@dimen/dimen_8" android:imeOptions="actionSearch" android:paddingStart="@dimen/dimen_32" android:paddingEnd="@dimen/dimen_20" android:layout_marginStart="@dimen/dimen_64" android:layout_marginEnd="@dimen/dimen_50" style="@style/NormalEditText" />
        <com.tcl.uicompat.TCLEditText android:textColorHint="#66ffffff" android:ellipsize="end" android:id="@id/edit_username" android:background="@drawable/portal_iptv_edit_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_88" android:layout_marginTop="@dimen/dimen_16" android:hint="@string/portal_iptv_edit_username" android:drawablePadding="@dimen/dimen_8" android:imeOptions="actionSearch" android:paddingStart="@dimen/dimen_32" android:paddingEnd="@dimen/dimen_20" android:layout_marginStart="@dimen/dimen_64" android:layout_marginEnd="@dimen/dimen_50" style="@style/NormalEditText" />
        <com.tcl.uicompat.TCLEditText android:textColorHint="#66ffffff" android:ellipsize="end" android:id="@id/edit_password" android:background="@drawable/portal_iptv_edit_selector" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_88" android:layout_marginTop="@dimen/dimen_16" android:hint="@string/portal_iptv_edit_password" android:drawablePadding="@dimen/dimen_8" android:inputType="textPassword" android:imeOptions="actionSearch" android:paddingStart="@dimen/dimen_32" android:paddingEnd="@dimen/dimen_20" android:layout_marginStart="@dimen/dimen_64" android:layout_marginEnd="@dimen/dimen_50" style="@style/NormalEditText" />
        <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_40" android:layout_marginBottom="@dimen/dimen_68">
            <com.tcl.uicompat.TCLButton android:textSize="@dimen/dimen_32" android:id="@id/btn_back" android:background="@drawable/bg_m3u_url_edit_button" android:focusableInTouchMode="true" android:layout_width="@dimen/dimen_320" android:layout_height="@dimen/dimen_96" android:text="@string/portal_iptv_back" style="@style/Button_Middle" />
            <com.tcl.uicompat.TCLButton android:textSize="@dimen/dimen_32" android:id="@id/btn_ok" android:background="@drawable/bg_m3u_url_edit_button" android:focusableInTouchMode="true" android:layout_width="@dimen/dimen_320" android:layout_height="@dimen/dimen_96" android:text="@string/portal_browse_dialog_ok" android:layout_marginStart="@dimen/dimen_32" style="@style/Button_Middle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/scan_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_176" android:layout_alignBottom="@id/rl_edit_dialog" android:layout_marginStart="@dimen/dimen_16" android:layout_toEndOf="@id/rl_edit_dialog">
        <View android:layout_gravity="bottom" android:background="@drawable/ic_bubble_arrow_left" android:layout_width="@dimen/dimen_18" android:layout_height="@dimen/dimen_40" android:layout_marginBottom="@dimen/dimen_52" />
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_qrcode_view" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/img_qrcode" android:layout_width="@dimen/dimen_180" android:layout_height="@dimen/dimen_180" android:layout_marginLeft="@dimen/dimen_25" android:layout_marginTop="@dimen/dimen_24" android:layout_marginRight="@dimen/dimen_25" />
            <TextView android:textSize="@dimen/dimen_24" android:textColor="#b3ffffff" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_8" android:layout_marginTop="@dimen/dimen_6" android:layout_marginRight="@dimen/dimen_8" android:layout_marginBottom="@dimen/dimen_14" android:text="@string/portal_browse_ua_qrcode_tip" android:maxLines="2" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>